WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202145
FocusPreservationTests.ChangingFocusedNodeResetsFocusPreservationState triggers a debug assertion
https://bugs.webkit.org/show_bug.cgi?id=202145
Summary
FocusPreservationTests.ChangingFocusedNodeResetsFocusPreservationState trigge...
Wenson Hsieh
Reported
2019-09-24 08:39:09 PDT
<
rdar://problem/51273128
>
Attachments
Patch
(4.48 KB, patch)
2019-09-24 08:50 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-09-24 08:50:02 PDT
Created
attachment 379454
[details]
Patch
WebKit Commit Bot
Comment 2
2019-09-24 10:25:11 PDT
Comment on
attachment 379454
[details]
Patch Clearing flags on attachment: 379454 Committed
r250306
: <
https://trac.webkit.org/changeset/250306
>
WebKit Commit Bot
Comment 3
2019-09-24 10:25:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug